third_party/move/move-compiler-v2/tests/checking/typing/type_variable_join_single_pack_invalid.exp

Diagnostics:
error: expected `bool` but found a value of type `integer`
  ┌─ tests/checking/typing/type_variable_join_single_pack_invalid.move:5:38
  │
5 │         let b = Box { f1: false, f2: 1 };
  │                                      ^

error: expected `integer` but found a value of type `bool`
  ┌─ tests/checking/typing/type_variable_join_single_pack_invalid.move:6:65
  │
6 │         let b2 = Box { f1: Box { f1: 0, f2: 0 }, f2:  Box { f1: false, f2: false } };
  │                                                                 ^^^^^
